--- a/app/assets/javascripts/angular/templates/ng_predictor_main.html.haml
+++ b/app/assets/javascripts/angular/templates/ng_predictor_main.html.haml
@@ -4,9 +4,11 @@
   .collapse-all-toggler
     .collapse-arrow.outdent
     .predictor-section-title
-      .predictor-section-title-left
-        Predicted Final Grade: {{predictedGradeLevel()}}
-      .predictor-section-title-right{{'ng-if'=>'weightsAvailable()'}}
+      .predictor-section-title-name
+        %span.desktop-only
+          Predicted Final Grade:
+        {{predictedGradeLevel()}}
+      .predictor-section-title-predicted-points{{'ng-if'=>'weightsAvailable()'}}
         .predictor-title-right-span
           Unused {{termFor.weights}} :
         .predictor-section-title-weights
