--- a/app/assets/javascripts/angular/templates/ng_predictor_graphic.html.haml
+++ b/app/assets/javascripts/angular/templates/ng_predictor_graphic.html.haml
@@ -1,3 +1,4 @@
+.graphics-mobile-spacer
 .graphics-wrap
   .graphics-screen.sticky-item{"ng-class"=>"{stuck:offset(50)}"}
     %svg{"id" => "predictor-graphic"}
@@ -8,11 +9,11 @@
       %g{"id" => "svg-grade-level-text"}
       %g{"id" => "svg-keys"}
         %g{"id" => "svg-earned-key"}
-          %rect.key
+          %rect.key{"width"=>"20", "height"=>"20"}
           %text.description{"x"=>"22", "y"=>"16", "font-family"=>"Verdana"}
             Total Earned: {{allPointsEarned() | number}}
         %g{"id" => "svg-predicted-key"}
-          %rect.key
+          %rect.key{"width"=>"20", "height"=>"20"}
           %text.description{"x"=>"22", "y"=>"16", "font-family"=>"Verdana"}
             Total Predicted: {{allPointsPredicted() | number}} (left to earn: {{allPointsPredicted() - allPointsEarned() | number}})
 
