--- a/app/views/staff/index.html.haml
+++ b/app/views/staff/index.html.haml
@@ -23,12 +23,11 @@
           %td= link_to user.last_name, staff_path(user)
           %td= user.course_memberships.where(:course_id => current_course.id).first.role.capitalize
           %td
-            %ul
-              - user.team_leaderships.each do |leadership|
-                %li= link_to leadership.team.try(:name), leadership.team
+            - user.team_leaderships_for_course(current_course).each do |leadership|
+              %div= link_to leadership.team.try(:name), leadership.team
           %td
             .right
               %ul
-                %li= link_to 'Dashboard', staff_path(user), {:class => 'button'}
-                %li= link_to 'Edit', edit_user_path(user), {:class => 'button'}
-                %li= link_to 'Delete', user, :class => 'button', :data => { confirm: 'Are you sure?'}, :method => :delete
+                %li= link_to raw("<i class='fa fa-dashboard fa-fw'> </i> Dashboard"),  staff_path(user), {:class => 'button'}
+                %li= link_to raw("<i class='fa fa-edit fa-fw'> </i> Edit"),  edit_user_path(user), {:class => 'button'}
+                %li= link_to raw("<i class='fa fa-trash fa-fw'> </i> Delete"),  user, :class => 'button', :data => { confirm: 'Are you sure?'}, :method => :delete
