--- a/app/views/students/_students_table.haml
+++ b/app/views/students/_students_table.haml
@@ -1,6 +1,7 @@
 %table.responsive.nofeatures_default_last_name_dynatable
   %thead
     %tr
+      %th
       %th First Name
       %th Last Name
       - if current_course.in_team_leaderboard?
@@ -15,10 +16,10 @@
   %tbody
     - students.each do |student|
       %tr
-        %td
+        %td 
           - if student.avatar_file_name.present?
             %img.img-rounded{:src => student.avatar_file_name, :width => 30}
-          = link_to student.first_name, student_path(student)
+        %td= link_to student.first_name, student_path(student)
         %td= link_to student.last_name, student_path(student)
         - if current_course.in_team_leaderboard?
           %td
@@ -31,10 +32,7 @@
           %td= student.try(:team_role)
         - if student.respond_to?(:grades)
           %td= current_course.score_for_student(student)
-          %td
-            = student.grade_letter_for_course(current_course)
-            = "-" if student.grade_letter_for_course(current_course).present? && student.grade_level_for_course(current_course).present?
-            = student.grade_level_for_course(current_course)
+          %td= student.grade_for_course(current_course).name
         %td
           .right
             %ul
