--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -42,9 +42,7 @@
             - if current_course.team_roles?
               %td= student.team_role
             %td= student.cached_score_for_course(current_course) if student.respond_to?(:grades)
-            %td
-              = student.grade_letter_for_course(current_course)
-              = student.grade_level_for_course(current_course)
+            %td= student.grade_for_course(current_course).name
             - if current_course.has_badges?
               %td
                 - student.earned_badges_for_course(current_course).each do |badge|
