--- a/app/views/users/edit_profile.html.haml
+++ b/app/views/users/edit_profile.html.haml
@@ -23,7 +23,7 @@
         = f.password_field :password_confirmation, :as => :password
 
     - if @user.is_student?(current_course)
-      - if current_course.teams_visible? && (current_course.in_team_leaderboard? || (current_student.team_for_course(current_course).present? && current_student.team_for_course(current_course).in_team_leaderboard?))
+      - if current_course.teams_visible? && (current_course.in_team_leaderboard? || (current_student.team_for_course(current_course).present? && current_student.team_for_course(current_course).in_team_leaderboard?)) || current_course.character_names?
         .form-item
           = f.label :display_name, "Pseudonym"
           = f.text_field :display_name
