--- a/app/views/students/leaderboard.html.haml
+++ b/app/views/students/leaderboard.html.haml
@@ -19,17 +19,16 @@
         %th{:scope => "col", "data-dynatable-sorts" => "rank"} Rank
         %th{:scope => "col"} First Name
         %th{:scope => "col"} Last Name
-        - if current_course.has_pseudyonyms?
+        - if current_course.character_names?
+          %th Pseudonyms
         %th{:scope => "col", "data-dynatable-sorts" => "score"} Score
         - if current_course.has_teams?
           %th{:scope => "col"} #{current_course.team_term}
-          - if current_course.in_team_leaderboard?
-            %th{:scope => "col"} Pseudonym
         %th{:scope => "col"} Grade
         - if current_course.has_badges?
-          %th{:scope => "col", "data-dynatable-sorts" => "badgeCount", :style => "min-width: 200px"  } Badges Earned
+          %th{:scope => "col", "data-dynatable-sorts" => "badgeCount", :style => "min-width: 150px"  } Badges Earned
           %th{:style => "display: none"} Badge Count
-        %th{:scope => "col", "data-dynatable-no-sort" => "true", :style => "min-width: 200px" }
+        %th{:scope => "col", "data-dynatable-no-sort" => "true", :style => "min-width: 150px" }
           %span.sr-only Actions
       %tbody
         - @students.each_with_index do |student, index|
@@ -37,13 +36,13 @@
             %td{"data-title" => "Rank"}= index + 1
             %td{"data-title" => "First Name"}= link_to student.first_name, student_path(student)
             %td{"data-title" => "Last Name"}= link_to student.last_name, student_path(student)
+            - if current_course.in_team_leaderboard? || current_course.character_names?
+              %td{"data-title" => "Pseudonym"}= student.display_name
             %td{"data-title" => "Score"}= points student.cached_score_for_course(current_course)
             - if current_course.has_teams?
               - student_team = @teams_by_student_id[student.id]
               %td#team_for_course{"data-title" => "Team"}
                 = link_to student_team.try(:name), student_team if student_team
-              - if current_course.in_team_leaderboard?
-                %td{"data-title" => "Pseudonym"}= student.display_name
             %td{"data-title" => "Grade"}
               - unless @student_grade_schemes_by_id[student.id].nil?
                 = "#{@student_grade_schemes_by_id[student.id].name}"
