--- a/app/views/students/_students_table.haml
+++ b/app/views/students/_students_table.haml
@@ -30,9 +30,12 @@
               = link_to student.team.name, student.team
         - if current_course.team_roles?
           %td= student.try(:team_role)
-        - if student.respond_to?(:grades)
-          %td= current_course.score_for_student(student)
-          %td= student.grade_for_course(current_course).name
+        %td
+          - if student.respond_to?(:grades)
+            = current_course.score_for_student(student)
+        %td
+          - if student.grade_for_course(current_course).present?
+            = student.grade_for_course(current_course).name
         %td
           .right
             %ul
