Updated hover style on sidebar

--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -59,9 +59,10 @@
     width: 100%
     padding: 0
     li
+      width: 10%
       display: inline-block
       list-style-type: none
-      margin-bottom: .25rem
+      margin-bottom: .5rem
       img
         width: 100%
 
