--- a/app/views/students/sidebar/_sidebar_badges.haml
+++ b/app/views/students/sidebar/_sidebar_badges.haml
@@ -7,30 +7,32 @@
         - if badge.point_total.present? && badge.point_total > 0
           - if badge.is_unlockable?
             - if badge.is_unlocked_for_student?(current_student)
-              .icon
-                .icon-tooltip
-                  %i.fa.fa-unlock-alt= "#{badge.name}, #{badge.point_total} points"
-                %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned"}
+              %a
+                %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned" }
+              .display_on_hover.unlock_keys
+                %i.fa.fa-unlock-alt= " #{badge.name}, #{badge.point_total} points"
             - else
-              .icon
-                .icon-tooltip
-                  %i.fa.fa-lock= "#{badge.name}, #{badge.point_total} points"
-                %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned"}
+              %a
+                %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned" }
+              .display_on_hover.unlock_keys
+                %i.fa.fa-lock= " #{badge.name}, #{badge.point_total} points"
           - else
-            .icon
-              .icon-tooltip
-                ="#{badge.name}, #{badge.point_total} points"
-              %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned"}
+            %a
+              %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned" }
+            .display_on_hover.unlock_keys
+              ="#{badge.name}, #{badge.point_total} points"
         - else
-          .icon
-            .icon-tooltip
-              = "#{badge.name}"
+          %a
             %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned"}
+          .display_on_hover.unlock_keys
+            = "#{badge.name}"
+            
     - current_student.student_visible_unearned_badges(current_course).each do |badge|
       %li
-        .icon
-          .icon-tooltip
-            = "Not yet earned: #{badge.name}"
+        %a
           %img{:src => badge.try(:icon), :alt => "#{badge.try(:name)}", :class => "unearned"}
+        .display_on_hover.unlock_keys
+          = "Not yet earned: #{badge.name}"
+          
     - if current_student.earned_badge_score > 0
       .italic.small= "You've earned #{points current_student.earned_badge_score} points through #{(term_for :badges).titleize}."
