--- a/app/views/layouts/_staff.haml
+++ b/app/views/layouts/_staff.haml
@@ -9,8 +9,8 @@
       = render "students/student_profile_tabs"
 
   / Page content
-  .panel.mainContent{ :class => (current_student ? 'student' : '') }= render 'layouts/content'
+  .panel.mainContent{ :class => (@display_sidebar ? 'student' : '') }= render 'layouts/content'
 
-  - if current_student.present?
+  - if @display_sidebar == true
     .student-sidebar
       = render "students/student_sidebar"
