Consistent hover tip styles

--- a/app/assets/javascripts/angular/templates/ng_predictor_icons.html.haml
+++ b/app/assets/javascripts/angular/templates/ng_predictor_icons.html.haml
@@ -1,4 +1,5 @@
 .icon.predictor-required-icon{'ng-if' => 'target[iconName]'}
-  .icon-tooltip{'ng-bind-html'=>'iconHtml[iconName].tooltip | list'}
-  %i.fa.fa-fw{'class'=>'{{iconHtml[iconName].icon}}'}
-
+  %a
+    %i.fa.fa-fw{'class'=>'{{iconHtml[iconName].icon}}'}
+  .display_on_hover.hover-style
+    %span{'ng-bind-html'=>'iconHtml[iconName].tooltip | list'}
