--- a/app/assets/stylesheets/_icons.sass
+++ b/app/assets/stylesheets/_icons.sass
@@ -3,3 +3,6 @@ i.fa-slack
   -ms-transform: rotate(19deg)
   -webkit-transform: rotate(19deg)
   transform: rotate(19deg)
+
+.yellow
+  color: $color-yellow-1
