--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -140,12 +140,13 @@ hr.light-grey
 a:hover + .display_on_hover
   display: block
 
-.unlock_keys
+.hover-style
   position: absolute
   display: none
   padding: 0.5rem
   width: 250px
-  background-color: $primary-color-5
+  font-size: .9rem
+  background-color: $secondary-color-3
   color: #FFF
   border-radius: $global-radius
   z-index: 10
@@ -155,10 +156,10 @@ a:hover + .display_on_hover
     font-weight: bold
 
   ul
-    margin-bottom: 0
+    margin: 0
+    padding: 0
 
     li 
-      font-size: .8rem
       color: #FFF
       display: block
       clear: both
