--- a/app/views/assignments/index.html.haml
+++ b/app/views/assignments/index.html.haml
@@ -45,7 +45,7 @@
                     - if assignment.is_unlockable?
                       %a
                         %i.fa.fa-lock
-                      .display_on_hover.unlock_keys
+                      .display_on_hover.hover-style
                         %h3 Unlock Requirements
                         %ul
                           - assignment.unlock_conditions.each do |condition|
@@ -53,7 +53,7 @@
                     - if assignment.is_a_condition?
                       %a
                         %i.fa.fa-key
-                      .display_on_hover.unlock_keys
+                      .display_on_hover.hover-style
                         %h3 Unlock Key
                         %ul
                           - assignment.unlock_keys.each do |key|
