--- a/app/views/badges/index.html.haml
+++ b/app/views/badges/index.html.haml
@@ -31,7 +31,7 @@
             - if badge.is_unlockable?
               %a
                 %i.fa.fa-lock
-              .display_on_hover.unlock_keys
+              .display_on_hover.hover-style
                 %h3 Unlock Requirements
                 %ul
                   - badge.unlock_conditions.each do |condition|
@@ -39,7 +39,7 @@
             - if badge.is_a_condition?
               %a
                 %i.fa.fa-key
-              .display_on_hover.unlock_keys
+              .display_on_hover.hover-style
                 %h3 Unlock Key
                 %ul
                   - badge.unlock_keys.each do |key|
