--- a/app/views/badges/show.html.haml
+++ b/app/views/badges/show.html.haml
@@ -44,7 +44,7 @@
           %a
             %i.fa.fa-lock
             Unlock Requirements
-          .display_on_hover.unlock_keys
+          .display_on_hover.hover-style
             %ul
               - @badge.unlock_conditions.each do |condition|
                 %li= "#{condition.name} must be #{condition.condition_state}"
@@ -53,7 +53,7 @@
           %a
             %i.fa.fa-key
             Unlock Keys
-          .display_on_hover.unlock_keys
+          .display_on_hover.hover-style
             %ul
               - @badge.unlock_keys.each do |key|
                 %li= "#{key.unlockable.name} is unlocked by #{key.condition_state} #{key.condition.name}"
