--- a/app/views/students/_group_submissions.html.haml
+++ b/app/views/students/_group_submissions.html.haml
@@ -1,5 +1,5 @@
 - if group && group.submission_for_assignment(assignment)
-  %li= link_to "See Submission", assignment_path(assignment, :anchor => "fndtn-tabt3"), :class => 'button'
+  %li= link_to raw("<i class='fa fa-file-o fa-fw'></i> See Submission"), assignment_path(assignment, :anchor => "fndtn-tabt3"), :class => 'button'
 - else
   - if group && group.approved?
-    %li= link_to "Submit", new_assignment_submission_path(assignment, :group_id => group), :class => 'button'
+    %li= link_to raw("<i class='fa fa-upload fa-fw'></i> Submit"), new_assignment_submission_path(assignment, :group_id => group), :class => 'button'
