--- a/app/views/assignments/index.html.haml
+++ b/app/views/assignments/index.html.haml
@@ -32,7 +32,7 @@
                 %th{:scope => "col", :width => "20%"} Name
                 %th Due
                 %th{:style => "display: none"} Due Date
-                %th{:scope => "col", :width => "10%"}  Max Value
+                %th{:scope => "col", :width => "10%"}  Max Points
                 %th Rubric?
                 %th{ :style => "min-width: 200px" }
             %tbody.sort-assignments
