--- a/app/views/assignments/rubric_grades_review.html.haml
+++ b/app/views/assignments/rubric_grades_review.html.haml
@@ -63,7 +63,7 @@
                 %td(colspan="#{@assignment.rubric.try(:max_tier_count)}")
                   .larger
                     %strong Level
-                    .not_bold.italic Point value
+                    .not_bold.italic Points
                 %td{:width => "25%"}
                   %strong
                     Comments
