--- a/app/views/challenges/index.html.haml
+++ b/app/views/challenges/index.html.haml
@@ -18,7 +18,7 @@
       %tr
         %th Name
         %th Description
-        %th Max Value
+        %th Max Points
         %th{"data-dynatable-sorts" => "dueDate"} Due
         %th{:style => "display: none"} Due Date
         %th Visible
