--- a/app/views/grades/_rubric_edit.html.haml
+++ b/app/views/grades/_rubric_edit.html.haml
@@ -35,7 +35,7 @@
           %td.tier.heading(colspan="#{@rubric.max_tier_count}")
             %label.larger
               %strong Level:
-              Point value
+              Points Awarded
           %td.comments.heading(ng-show="tiersSelected().length > 0")
             %label.larger
               Comments
