--- a/app/views/grades/_rubric_grade_results.haml
+++ b/app/views/grades/_rubric_grade_results.haml
@@ -5,7 +5,7 @@
         Criterion:&nbsp;Max&nbsp;points
 
       %td.tier.heading(colspan="#{@rubric.max_tier_count}")
-        Level: Point value
+        Level: Points Awarded
       %td.comments.heading(ng-show="tiersSelected().length > 0")
         Comments
 
