--- a/app/views/assignments/_assignment_score_level_fields.haml
+++ b/app/views/assignments/_assignment_score_level_fields.haml
@@ -1,8 +1,8 @@
 .panel
   .columns
-    = f.input :name, :label => "Score Name"
+    = f.input :name, :label => "Level Name"
   .columns
-    = f.label :value
+    = f.label :value, "Points Awarded"
     = f.text_field :value
     = f.hidden_field :id
   .right
