--- a/app/views/challenges/_challenge_score_level_fields.haml
+++ b/app/views/challenges/_challenge_score_level_fields.haml
@@ -1,8 +1,8 @@
 .small-12.columns.panel
   %span.large-3.columns
-    = f.input :name, :label => "Score Name"
+    = f.input :name, :label => "Level Name"
   %span.large-3.columns
-    = f.label :value
+    = f.label :value, "Points Awarded"
     = f.text_field :value, data: {autonumeric: true, "m-dec" => "0"}
   %span.large-6.columns
     = f.hidden_field :_destroy, class: 'destroy'
