--- a/app/views/challenges/_form.html.haml
+++ b/app/views/challenges/_form.html.haml
@@ -73,10 +73,10 @@
           %li
             - if cf.file_processing
               = "#{cf.filename}"
-              .icon
-                .icon-tooltip
-                  Refresh page to confirm upload has completed", :data => {'tooltip' => true}}
-                %i.fa.fa-spinner= "(upload in progress)"
+              %a
+                %i.fa.fa-spinner.fa-fw= "(upload in progress)"
+              .display-on-hover.hover-style
+                Refresh page to confirm upload has completed
             - else
               = link_to cf.filename, cf.url, :target => "_blank"
               = link_to "(Remove)", remove_uploads_path({ :model => "ChallengeFile", :challenge_id => @challenge.id, :upload_id => cf.id } )
