--- a/app/views/grades/standard_edit/_standard_edit_attachment.html.haml
+++ b/app/views/grades/standard_edit/_standard_edit_attachment.html.haml
@@ -10,8 +10,10 @@
         %li
           - if ! gf.file_processing
             = "#{gf.filename}"
-            %span.has-tip{:title => "Refresh page to confirm upload has completed", :data => {'tooltip' => true}}
-              = "(upload in progress)"
+            %a
+              %i.fa.fa-spinner.fa-fw= "(upload in progress)"
+            .display-on-hover.hover-style
+              Refresh page to confirm upload has completed
           - else
             = link_to gf.filename, gf.url, :target => "_blank"
             = link_to "(Remove)", remove_uploads_path({ :model => "GradeFile", :grade_id => @grade.id, :upload_id => gf.id } )
