--- a/app/views/info/resubmissions.html.haml
+++ b/app/views/info/resubmissions.html.haml
@@ -52,7 +52,7 @@
                     %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Submission"), assignment_submission_path(re.assignment, :id => re.id), :class => "button"
                     %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit Grade"), edit_assignment_grade_path(:assignment_id =>assignment.id, :student_id => re.student.try(:id)), :class => "button"
             - elsif re.assignment.has_groups?
-              %td= link_to re.group.try(:name), group_path(re.group)
+              %td= link_to re.group.try(:name), group_path(:id => re.group.id)
               %td
                 .right
                   %ul
