Maybe we do need font awesome twice

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,7 @@
  *= require s3_direct_upload_progress_bars
  *= require jquery-ui.min
  *= require jquery.circliful
+ *= require font-awesome
  *= require animate.min
  *= require select2
  *= require jquery.dynatable
