--- a/app/views/students/_students_table.haml
+++ b/app/views/students/_students_table.haml
@@ -4,7 +4,7 @@
       %th
       %th First Name
       %th Last Name
-      - if current_course.in_team_leaderboard?
+      - if current_course.in_team_leaderboard? || current_course.character_names?
         %th Screenname
       - if current_course.has_teams?
         %th #{current_course.team_term}
@@ -21,13 +21,13 @@
             %img.img-rounded{:src => student.avatar_file_name, :width => 30}
         %td= link_to student.first_name, student_path(student)
         %td= link_to student.last_name, student_path(student)
-        - if current_course.in_team_leaderboard?
+        - if current_course.in_team_leaderboard? || current_course.character_names?
           %td
             = student.display_name
         - if current_course.has_teams?
           %td
-            - if student.team
-              = link_to student.team.name, student.team
+            - if student.team_for_course(current_course)
+              = link_to student.team_for_course(current_course).name, team_path(:id => student.team_for_course(current_course).id)
         - if current_course.team_roles?
           %td= student.try(:team_role)
         %td
