Styling top bar course list

--- a/app/assets/stylesheets/_typography.sass
+++ b/app/assets/stylesheets/_typography.sass
@@ -137,3 +137,9 @@ h5.section-title
 
 .uploaded-files
   font-weight: normal
+
+h4.past-label
+  text-transform: uppercase
+  font-weight: normal
+  margin-left: .75rem
+  margin-top: .75rem
