--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -130,6 +130,13 @@ hr.dotted
   border: 0
   border-bottom: 1px dashed $secondary-color-3
 
+  &.no-margin
+    margin: 0
+
+  &.top-margin
+    margin-top: .5rem
+    margin-bottom: 0
+
 hr.light-grey
   border-color: $color-grey-3
   border: 1px
