--- a/app/views/layouts/navigation/_course_list.haml
+++ b/app/views/layouts/navigation/_course_list.haml
@@ -5,9 +5,8 @@
   %li= link_to raw("Create a New Course <i class='fa fa-angle-double-right fa-fw'></i>"), new_course_path
 
 - if current_user.archived_courses.present?
-  .past_courses
-    %hr
-    %h5 Past Courses
-    - current_user.courses.alphabetical.each do |c|
-      - if ! c.active?
-        %li.archived= link_to raw("<i class ='fa fa-home fa-fw'></i>  #{c.courseno} #{c.semester.capitalize.first[0]}#{c.year}"), change_current_course_path(:course_id => c.id), :method => 'post'
+  %hr.dotted.top-margin
+  %h4.past-label Past Courses
+  - current_user.courses.alphabetical.each do |c|
+    - if ! c.active?
+      %li.archived= link_to raw("<i class ='fa fa-home fa-fw'></i>  #{c.courseno} #{c.semester.capitalize.first[0]}#{c.year}"), change_current_course_path(:course_id => c.id), :method => 'post'
