Show team challenges on the syllabus if they contribute to students scores directly

--- a/app/views/students/show.html.haml
+++ b/app/views/students/show.html.haml
@@ -4,4 +4,4 @@
   = render 'layouts/alerts'
   
   = render 'students/syllabus/assignments'
-  //= render "students/syllabus/challenges"
+  = render "students/syllabus/challenges"
