--- a/app/views/students/syllabus/_challenges.haml
+++ b/app/views/students/syllabus/_challenges.haml
@@ -1,4 +1,4 @@
-- if current_course.team_challenges? && current_course.team_score_average?
+- if current_course.team_challenges? && current_course.add_team_score_to_student?
   .challenge
 
     %h3.collapse 
@@ -6,28 +6,33 @@
         %i.fa.fa-angle-double-right.fa-fw
       #{term_for :challenges} #{ points @student.team.try(:challenge_grade_score) }/#{points current_course.point_total_for_challenges}
 
-    .small-12.columns
-      %table.responsive
+    .collapse-hidden
+      %table
+        %thead
+          %tr
+            %th Name
+            %th Points Earned
+            %th Due
+            %th
         - current_course.challenges.each do |challenge|
           %tr
             %td{:width => "25%"}= link_to challenge.name, challenge
-            - if @student.team
-              %td{:width => "25%"}
-                - if challenge.challenge_grade_for_team(@student.team).present?
-                  %span.points
-                    %span.earned= points challenge.challenge_grade_for_team(@student.team).try(:score)
-                    %span= "/"
-                    %span
-                      = points challenge.point_total
-                    = "points"
-            - if challenge.future?
-              %td{:width => "25%"}= " • Due: #{challenge.due_at.strftime("%A, %B %d, %l:%M%p")}"
-            %td
-              - if current_user_is_staff?
-                %li
-                  %a{:href => edit_challenge_challenge_grade_path(challenge.id, challenge_grade.id, :team_id => @student.team.id), :class => 'button'}
-                    Edit Grade
+            %td{:width => "25%"}
+              - if current_student.team_for_course(current_course).present?
+                - if challenge.challenge_grade_for_team(current_student.team).present?
+                  = "#{points challenge.challenge_grade_for_team(current_student.team_for_course(current_course)).try(:score)} / #{points challenge.point_total} points"
               - else
-                %li
-                  %a{:href => new_challenge_challenge_grade_path(:challenge_id => challenge.id, :team_id => @student.team.id), :class => 'button'}
-                    Grade
+                %span.italic= "#{points challenge.point_total} points possible"
+            - if challenge.future?
+              %td{:width => "25%"}= "#{challenge.due_at.strftime("%A, %B %d, %l:%M%p")}"
+            %td
+              .right
+                %ul
+                  - if current_user_is_staff?
+                    %li
+                      %a{:href => edit_challenge_challenge_grade_path(challenge.id, challenge.challenge_grade_for_team(current_student.team), :team_id => current_student.team_for_course(current_course).id), :class => 'button'}
+                        Edit Grade
+                  - else
+                    %li
+                      %a{:href => new_challenge_challenge_grade_path(:challenge_id => challenge.id, :team_id => current_student.team_for_course(current_course).id), :class => 'button'}
+                        Grade
