slight spacing change on predictor

--- a/app/assets/stylesheets/_predictor.sass
+++ b/app/assets/stylesheets/_predictor.sass
@@ -204,6 +204,7 @@ $predictor-font-size-5 : .55rem
 
 .collapsable
   clear: both
+  padding: 0 0 0 1.5rem
 
 article.predictor-article
   display: block
