Simplify flash message display

--- a/app/assets/stylesheets/_alerts.sass
+++ b/app/assets/stylesheets/_alerts.sass
@@ -1,4 +1,4 @@
-.alert-box 
+.alert-box
   padding: .25rem .5rem !important
   background-color: $primary-color-5
   color: #FFF
@@ -21,7 +21,7 @@
       opacity: 0.5
   &.alert
     background-color: $alert-color
-  &.success
+  &.success, &.notice
 
 .student .alert-box
   margin: 1.5rem 1rem 0
@@ -33,7 +33,7 @@
   background-color: lighten($color-red-1, 10%)
   font-size: 110%
 
-.alert-box.success
+.alert-box.success, .alert-box.notice
   background-color: darken($color-green-2, 2%)
   font-size: 110%
 
