--- a/app/views/layouts/_alerts.haml
+++ b/app/views/layouts/_alerts.haml
@@ -1,12 +1,5 @@
-- if flash[:notice]
-  .alert-box.success
-    = flash[:notice].html_safe
-    <a href="" class="close">&times;</a>
-- if flash[:error]
-  .alert-box.error
-    = flash[:error].html_safe
-    <a href="" class="close">&times;</a>
-- if flash[:alert]
-  .alert-box.alert
-    = flash[:alert].html_safe
-    <a href="" class="close">&times;</a>
+- flash.each do |name, message|
+  %div{ class: "alert-box #{name}" }
+    = message.html_safe
+    %a{ href: "#", class: "close" }
+      = "&times;".html_safe
