Display model errors within the alerts

--- a/app/views/layouts/_alerts.haml
+++ b/app/views/layouts/_alerts.haml
@@ -3,3 +3,11 @@
     = message.html_safe
     %a{ href: "#", class: "close" }
       = "&times;".html_safe
+
+- if !request.get? && local_assigns[:model].present? && !model.valid?
+  .alert-box.alert
+    - message_term = local_assigns[:term] ? term : model.class.name.humanize.downcase
+    .italic= "#{pluralize(model.errors.count, "error")} prohibited this #{message_term} from being saved:"
+    %ul
+      - model.errors.full_messages.each do |message|
+        %li= message
