--- a/app/views/users/edit_profile.html.haml
+++ b/app/views/users/edit_profile.html.haml
@@ -3,9 +3,9 @@
 %h3.pagetitle= @title
 
 .pageContent
-  = render 'layouts/alerts'
-  
-  = simple_form_for(@user, method: :put, :url => update_profile_users_path(@user)) do |f|
+  = render partial: 'layouts/alerts', locals: { model: @user, term: "profile" }
+
+  = simple_form_for(@user, method: :put, :url => update_profile_users_path) do |f|
 
     .form-item
       %label.bold Your Avatar
