Fixed bizarre styling on uls nested in alert boxes

--- a/app/assets/stylesheets/_alerts.sass
+++ b/app/assets/stylesheets/_alerts.sass
@@ -24,7 +24,7 @@
   &.success, &.notice
 
 .student .alert-box
-  margin: 1.5rem 1rem 0
+  margin: 0 0 1rem
 
 .staff .alert-box
   margin-bottom: 1rem
@@ -43,4 +43,3 @@
 
   ul
     margin-bottom: 0
-    background-color: $secondary-color-3
