--- a/app/views/courses/_form.html.haml
+++ b/app/views/courses/_form.html.haml
@@ -1,9 +1,4 @@
-- if @course.errors.any?
-  .alert-box.alert
-    .italic= "#{pluralize(@course.errors.count, "error")} prohibited this course from being saved:"
-    %ul
-      - @course.errors.full_messages.each do |msg|
-        %li= msg
+= render partial: 'layouts/alerts', locals: { model: @course }
 
 = simple_form_for(@course, :validate => false)  do |f|
   %section
