--- a/app/views/challenges/_form.html.haml
+++ b/app/views/challenges/_form.html.haml
@@ -1,9 +1,4 @@
-- if @challenge.errors.any?
-  .alert-box.alert.radius
-    .italic= "#{pluralize(@challenge.errors.count, "error")} prohibited this #{term_for :challenge} from being saved:"
-    %ul
-      - @challenge.errors.full_messages.each do |msg|
-        %li= msg
+= render partial: 'layouts/alerts', locals: { model: @challenge, term: term_for(:challenge) }
 
 = simple_form_for(@challenge) do |f|
   %section
@@ -46,7 +41,7 @@
       = f.check_box :release_necessary
       .form_label Do you want to release all grades at once? This is particularly useful for situations where extensive feedback is important.
 
-  
+
   %section
     %h4 Grade Levels
     .challenge-score-levels
